[project]
name = "pwpw"
version = "0.1.0"
description = "Decentralized secret storage & identity manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pwpw-cli",
    "pwpw-common",
    "pwpw-http-client",
    "pwpw-protocol",
    "pwpwd",
    "pyright>=1.1.390",
]

[tool.uv.sources]
pwpw-cli = { workspace = true }
pwpw-common = { workspace = true }
pwpw-http-client = { workspace = true }
pwpw-protocol = { workspace = true }
pwpwd = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "ruff>=0.8.0",
]
